--- a/WebProto1/.project
+++ b/WebProto1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WebProto1</name>
+	<name>ColiseeWeb</name>
 	<comment></comment>
 	<projects>
 	</projects>
