--- a/WebProto1/WebContent/WEB-INF/web.xml
+++ b/WebProto1/WebContent/WEB-INF/web.xml
@@ -1,56 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>WebProto1</display-name>
-  
-   <welcome-file-list>
-      <welcome-file>index.html</welcome-file>
-   </welcome-file-list>
-  
-   <servlet>
-      <servlet-name>UploadServlet</servlet-name>
-      <servlet-class>controlleur.servlet.UploadServlet</servlet-class>
-      <multipart-config>
-          <max-file-size>10485760</max-file-size>
-          <max-request-size>20971520</max-request-size>
-          <file-size-threshold>5242880</file-size-threshold>
-      </multipart-config>  
-   </servlet>
-   
-   <servlet-mapping>
-      <servlet-name>UploadServlet</servlet-name>
-      <url-pattern>/uploadservlet</url-pattern>
-   </servlet-mapping>
-   
-   <servlet>
-      <servlet-name>SuppressionArmeServlet</servlet-name>
-      <servlet-class>controlleur.servlet.SuppressionArmeServlet</servlet-class>
-   </servlet>
-   
-   <servlet-mapping>
-      <servlet-name>SuppressionArmeServlet</servlet-name>
-      <url-pattern>/suppressionArme</url-pattern>
-   </servlet-mapping>
-   
-   <servlet>
-      <servlet-name>SuppressionGladiateurServlet</servlet-name>
-      <servlet-class>controlleur.servlet.SuppressionGladiateurServlet</servlet-class>
-   </servlet>
-   
-   <servlet-mapping>
-      <servlet-name>SuppressionGladiateurServlet</servlet-name>
-      <url-pattern>/suppressionGladiateur</url-pattern>
-   </servlet-mapping>
-   
-   <servlet>
-      <servlet-name>SauvegardeXMLServlet</servlet-name>
-      <servlet-class>controlleur.servlet.SauvegardeXMLServlet</servlet-class>
-   </servlet>
-   
-   <servlet-mapping>
-      <servlet-name>SauvegardeXMLServlet</servlet-name>
-      <url-pattern>/sauvegardeXML</url-pattern>
-   </servlet-mapping>
-   
-   
-   
+  <display-name>ColiseeWeb</display-name>
+  <welcome-file-list>
+    <welcome-file>upload.html</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>UploadServlet</servlet-name>
+    <servlet-class>controlleur.servlet.UploadServlet</servlet-class>
+    <multipart-config>
+      <max-file-size>10485760</max-file-size>
+      <max-request-size>20971520</max-request-size>
+      <file-size-threshold>5242880</file-size-threshold>
+    </multipart-config>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UploadServlet</servlet-name>
+    <url-pattern>/uploadservlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>SuppressionArmeServlet</servlet-name>
+    <servlet-class>controlleur.servlet.SuppressionArmeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SuppressionArmeServlet</servlet-name>
+    <url-pattern>/suppressionArme</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>SuppressionGladiateurServlet</servlet-name>
+    <servlet-class>controlleur.servlet.SuppressionGladiateurServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SuppressionGladiateurServlet</servlet-name>
+    <url-pattern>/suppressionGladiateur</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>SauvegardeXMLServlet</servlet-name>
+    <servlet-class>controlleur.servlet.SauvegardeXMLServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SauvegardeXMLServlet</servlet-name>
+    <url-pattern>/sauvegardeXML</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>EditionGladiateurServlet</servlet-name>
+    <servlet-class>controlleur.servlet.EditionGladiateurServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditionGladiateurServlet</servlet-name>
+    <url-pattern>/editionGladiateur</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>EditionArmeServlet</servlet-name>
+    <servlet-class>controlleur.servlet.EditionArmeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EditionArmeServlet</servlet-name>
+    <url-pattern>/editionArme</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>AjoutGladiateurServlet</servlet-name>
+    <servlet-class>controlleur.servlet.AjoutGladiateurServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AjoutGladiateurServlet</servlet-name>
+    <url-pattern>/ajoutGladiateur</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>AjoutArmeServlet</servlet-name>
+    <servlet-class>controlleur.servlet.AjoutArmeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AjoutArmeServlet</servlet-name>
+    <url-pattern>/ajoutArme</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>ModificationGladiateurServlet</servlet-name>
+    <servlet-class>controlleur.servlet.ModificationGladiateurServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ModificationGladiateurServlet</servlet-name>
+    <url-pattern>/modificationGladiateur</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>ModificationArmeServlet</servlet-name>
+    <servlet-class>controlleur.servlet.ModificationArmeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ModificationArmeServlet</servlet-name>
+    <url-pattern>/modificationArme</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>AssignationArmeServlet</servlet-name>
+    <servlet-class>controlleur.servlet.AssignationArmeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AssignationArmeServlet</servlet-name>
+    <url-pattern>/assignationArme</url-pattern>
+  </servlet-mapping>
 </web-app>
