--- a/WebProto1/pom.xml
+++ b/WebProto1/pom.xml
@@ -24,4 +24,16 @@
       </plugin>
     </plugins>
   </build>
+  
+  
+  
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    
 </project>
