--- a/WebProto1/pom.xml
+++ b/WebProto1/pom.xml
@@ -34,6 +34,11 @@
             <version>2.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+   			 <groupId>org.hsqldb</groupId>
+  		     <artifactId>hsqldb</artifactId>
+   	        <version>2.3.1</version>
+		</dependency>
     </dependencies>
     
 </project>
